# EncryptedCommunicator

./: Cargo.toml  README.md  compose.yaml
client/: compose.yaml
client/back/: Cargo.toml  Dockerfile
client/back/src/: main.rs
client/front/: Dockerfile  index.html  nginx.conf  server.js
server/: compose.yaml
server/backend/: Cargo.toml  Dockerfile  nginx.conf  start.sh
server/backend/src/: main.rs
server/frontend/: Dockerfile  index.html  server.js
src/: main.rs
