[package]
name = "secure-communicator-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.21.0"
ring = "0.17.8"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
http = "1.1.0"